syntax = "proto3";

import "pkg/protocol/core/base/base.proto";

package pbtset;

option go_package = "github.com/TencentBlueKing/bk-bcs/bcs-services/bcs-bscp/pkg/protocol/core/template-set;pbtset";

// TemplateSet source resource reference: pkg/dal/table/template_set.go
message TemplateSet {
  uint32 id = 1;
  TemplateSetSpec spec = 2;
  TemplateSetAttachment attachment = 3;
  pbbase.Revision revision = 4;
}

// TemplateSetSpec source resource reference: pkg/dal/table/template_set.go
message TemplateSetSpec {
  string name = 1;
  string memo = 2;
  repeated uint32 template_ids = 3;
  bool public = 4;
  repeated uint32 bound_apps = 5;
}

// TemplateSetAttachment source resource reference: pkg/dal/table/template_set.go
message TemplateSetAttachment {
  uint32 biz_id = 1;
  uint32 template_space_id = 2;
}

// TemplateSetOfBizDetail is template set of biz detail
message TemplateSetOfBizDetail {
  message TemplateSetOfBiz {
    uint32 template_set_id = 1;
    string template_set_name = 2;
    repeated uint32 template_ids = 3;
  }
  uint32 template_space_id = 1;
  string template_space_name = 2;
  repeated TemplateSetOfBiz template_sets = 3;
}

message TemplateSetBriefInfo {
  uint32 template_space_id = 1;
  string template_space_name = 2;
  uint32 template_set_id = 3;
  string template_set_name = 4;
}